--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "next-connect": "^1.0.0",
     "react": "^19.0.0",
